Simplied efi builds

--- a/src/boot/efi/CMakeLists.txt
+++ b/src/boot/efi/CMakeLists.txt
@@ -57,17 +57,10 @@ elseif (CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64")
 endif()
 
 
-SET(CMAKE_SHARED_LINKER_FLAGS "-nostdlib -e ${EFI_ENTRY_POINT}")
+SET(CMAKE_SHARED_LINKER_FLAGS "-nostdlib -e ${EFI_ENTRY_POINT} -Wl,--subsystem,10")
 
 ADD_LIBRARY(efiboot SHARED ${EFI_SRCS})
 
 TARGET_LINK_LIBRARIES(efiboot libc)
 
-
-ADD_CUSTOM_COMMAND(
-    OUTPUT ${CMAKE_BINARY_DIR}/${EFI_FILENAME}
-    COMMAND objcopy --target=${EFI_TARGET_FORMAT} $<TARGET_FILE:efiboot> "${EFI_FILENAME}"
-    DEPENDS efiboot
-)
-
-ADD_CUSTOM_TARGET(objcopy ALL DEPENDS ${CMAKE_BINARY_DIR}/${EFI_FILENAME})
+SET_TARGET_PROPERTIES(efiboot PROPERTIES PREFIX ""  SUFFIX "" OUTPUT_NAME ${EFI_FILENAME})
