Cleaned up weak functions - still doesn't work on MingW

--- a/src/libc/CMakeLists.txt
+++ b/src/libc/CMakeLists.txt
@@ -11,4 +11,7 @@ INCLUDE_DIRECTORIES(
 )
 
 
+SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -imacros libc-symbols.h")
+
+
 ADD_LIBRARY(libc STATIC ${LIBC_SRCS})
