Kernels added as multiboot modules.

--- a/src/iso/grub.cfg
+++ b/src/iso/grub.cfg
@@ -1,7 +1,11 @@
 menuentry "Kiznix OS (multiboot 1)" {
     multiboot /boot/kiznix_multiboot.elf
+    module /kiznix/kernel_x86.elf /kiznix/kernel_x86.elf
+    module /kiznix/kernel_x86_64.elf /kiznix/kernel_x86_64.elf
 }
 
 menuentry "Kiznix OS (multiboot 2)" {
     multiboot2 /boot/kiznix_multiboot.elf
+    module2 /kiznix/kernel_x86.elf /kiznix/kernel_x86.elf
+    module2 /kiznix/kernel_x86_64.elf /kiznix/kernel_x86_64.elf
 }
