--- a/src/iso/grub.cfg
+++ b/src/iso/grub.cfg
@@ -1,11 +1,11 @@
 menuentry "Kiznix OS (multiboot 1)" {
-    multiboot /boot/kiznix_multiboot.elf
-    module /kiznix/kernel_x86.elf /kiznix/kernel_x86.elf
-    module /kiznix/kernel_x86_64.elf /kiznix/kernel_x86_64.elf
+    multiboot /boot/kiznix_multiboot
+    module /kiznix/kernel_ia32 /kiznix/kernel_ia32
+    module /kiznix/kernel_x86_64 /kiznix/kernel_x86_64
 }
 
 menuentry "Kiznix OS (multiboot 2)" {
-    multiboot2 /boot/kiznix_multiboot.elf
-    module2 /kiznix/kernel_x86.elf /kiznix/kernel_x86.elf
-    module2 /kiznix/kernel_x86_64.elf /kiznix/kernel_x86_64.elf
+    multiboot2 /boot/kiznix_multiboot
+    module2 /kiznix/kernel_ia32 /kiznix/kernel_ia32
+    module2 /kiznix/kernel_x86_64 /kiznix/kernel_x86_64
 }
