--- a/boot/efi/Makefile
+++ b/boot/efi/Makefile
@@ -62,11 +62,14 @@ libgcc_path := $(shell $(CC) -print-file-name=libgcc.a)
 
 
 CPPFLAGS	:= $(addprefix -I,$(GLOBAL_INCLUDES)) $(addprefix -D,$(DEFINES))
-LDFLAGS		:= -shared -nostdlib -e $(EFI_ENTRY_POINT) --subsystem=10 --image-base=0x100000
+LDFLAGS		:= $(LDFLAGS) -shared -e $(EFI_ENTRY_POINT) --subsystem=10 --image-base=0x100000
 
 ifeq ($(TARGET_ARCH),ia32)
 CFLAGS		:= $(CFLAGS) -march=i386
 CXXFLAGS	:= $(CXXFLAGS) -march=i386
+else ifeq ($(TARGET_ARCH),x86_64)
+CFLAGS		:= $(CFLAGS) -mno-mmx -mno-sse
+CXXFLAGS	:= $(CXXFLAGS) -mno-mmx -mno-sse
 endif
 
 
