--- a/Makefile.config
+++ b/Makefile.config
@@ -111,12 +111,14 @@ LD	:= $(TOOLPREFIX)ld
 AS	:= nasm
 
 # These are for kernel space and should be different for user space
-CFLAGS		:= -c -O2 -ffreestanding -fbuiltin -Wall -Wextra -Werror -std=gnu99
-CXXFLAGS	:= -c -O2 -ffreestanding -fbuiltin -Wall -Wextra -Werror -std=gnu++11 -fno-exceptions -fno-rtti
+CFLAGS		:= -O2 -ffreestanding -fbuiltin -Wall -Wextra -Werror -std=gnu99
+CXXFLAGS	:= -O2 -ffreestanding -fbuiltin -Wall -Wextra -Werror -std=gnu++11 -fno-exceptions -fno-rtti
 CPPFLAGS	:=
-LDFLAGS		:= -nostdlib
+LDFLAGS		:= -nostdlib --warn-common --no-undefined --fatal-warnings
 ASFLAGS		:= -f elf
 
 ifeq ($(TARGET_ARCH),x86_64)
-LDFLAGS		:= $(LDFLAGS) -z max-page-size=0x1000
+	ifneq (mingw, $(findstring mingw, $(TOOLPREFIX)))
+		LDFLAGS := $(LDFLAGS) -z max-page-size=0x1000
+	endif
 endif
