--- a/Makefile.rules
+++ b/Makefile.rules
@@ -32,15 +32,15 @@
 define add-rules
 $(2)/%.asm.o $(2)/%.asm.d: $(1)/%.asm
 	@mkdir -p $$(dir $$@)
-	$$(AS) -MD $$(@:%.o=%.d) $$(ASFLAGS) $(local_ASFLAGS) -o $$($@@:%.d=%.o) $$<
+	$$(AS) -MD $$(@:%.o=%.d) $$(ASFLAGS) $(local_ASFLAGS) $$< -o $$($@@:%.d=%.o)
 
 $(2)/%.c.o $(2)/%.c.d: $(1)/%.c
 	@mkdir -p $$(dir $$@)
-	$$(CC) -MMD $$(CFLAGS) $(local_CFLAGS) $$(CPPFLAGS) $(local_CPPFLAGS) -o $$($@@:%.d=%.o) $$<
+	$$(CC) -MMD $$(CFLAGS) $(local_CFLAGS) $$(CPPFLAGS) $(local_CPPFLAGS) -c $$< -o $$($@@:%.d=%.o)
 
 $(2)/%.cpp.o $(2)/%.cpp.d: $(1)/%.cpp
 	@mkdir -p $$(dir $$@)
-	$$(CXX) -MMD $$(CXXFLAGS) $(local_CXXFLAGS) $$(CPPFLAGS) $(local_CPPFLAGS) -o $$($@@:%.d=%.o) $$<
+	$$(CXX) -MMD $$(CXXFLAGS) $(local_CXXFLAGS) $$(CPPFLAGS) $(local_CPPFLAGS) -c $$< -o $$($@@:%.d=%.o)
 endef
 
 # call $(add-module,MODULENAME,MODULEDIR)
