--- a/iso/grub.cfg
+++ b/iso/grub.cfg
@@ -1,13 +1,13 @@
 menuentry "Kiznix OS (multiboot 1)" {
     multiboot /boot/kiznix_multiboot
-    module /kiznix/trampoline /kiznix/trampoline
+    module /kiznix/startos /kiznix/startos
     module /kiznix/kernel_ia32 /kiznix/kernel_ia32
     module /kiznix/kernel_x86_64 /kiznix/kernel_x86_64
 }
 
 menuentry "Kiznix OS (multiboot 2)" {
     multiboot2 /boot/kiznix_multiboot
-    module2 /kiznix/trampoline /kiznix/trampoline
+    module2 /kiznix/startos /kiznix/startos
     module2 /kiznix/kernel_ia32 /kiznix/kernel_ia32
     module2 /kiznix/kernel_x86_64 /kiznix/kernel_x86_64
 }
