Implemented ELF relocations. Startos is now a shared library and can be called from the multiboot loader.

--- a/boot/startos/Makefile
+++ b/boot/startos/Makefile
@@ -37,7 +37,7 @@ $(eval $(call load-modules,$(MODULES)))
 CPPFLAGS	:= $(addprefix -I,$(GLOBAL_INCLUDES))
 CFLAGS		:= $(CFLAGS) -march=i386
 CXXFLAGS	:= $(CXXFLAGS) -march=i386
-LDFLAGS		:= $(LDFLAGS) -T startos.ld
+LDFLAGS		:= $(LDFLAGS) -shared -T startos.ld
 
 
 
