--- a/boot/efi/Makefile
+++ b/boot/efi/Makefile
@@ -48,13 +48,14 @@ GLOBAL_INCLUDES := \
 	. \
 	../common \
 	../../include \
+	../../libc/include \
 	../../third_party/gnu-efi/inc \
 	../../third_party/gnu-efi/inc/$(TARGET_ARCH) \
 	../../third_party/gnu-efi/inc/protocol
 
 DEFINES := HAVE_USE_MS_ABI ARCH=$(TARGET_ARCH)
 
-MODULES := . ../common ../../third_party/gnu-efi
+MODULES := . ../common ../../libc ../../third_party/gnu-efi
 
 
 $(eval $(call load-modules,$(MODULES)))
